<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="30dp"
        android:background="#FF5722"
        android:layout_margin="9dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F07530">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNumeroTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_card"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:id="@+id/llNumeroTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNumeroTarjeta">

                <TextView
                    android:id="@+id/tvNumeroTarjetaPt1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    tools:text="4562"/>
                <TextView
                    android:id="@+id/tvNumeroTarjetaPt2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    tools:text="5264"/>
                <TextView
                    android:id="@+id/tvNumeroTarjetaPt3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    tools:text="3698"/>
                <TextView
                    android:id="@+id/tvNumeroTarjetaPt4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    tools:text="9684"/>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitularTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titular_de_la_tarjeta"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/llNumeroTarjeta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitularTarjetaResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="John Doe the First"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                android:background="@drawable/border"
                android:layout_margin="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitularTarjeta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFechaExpiracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_expiracion"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitularTarjetaResponse" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvv"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitularTarjetaResponse" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFechaExpiracionResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFechaExpiracion"
                tools:text="03/26" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCVVResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/generar_cvv"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCvv"
               />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="30dp">
        <androidx.core.widget.NestedScrollView

            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMain"
                android:background="#F2F2F2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_mov"/>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>